[tool.poetry]
name = "retrack"
version = "2.11.1a1"
description = "A business rules engine"
authors = ["Gabriel Guarisa <gabriel.guarisa@pier.digital>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pier-digital/retrack"
homepage = "https://github.com/pier-digital/retrack"
keywords = ["rules", "models", "business", "node", "graph"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = ">=1.2.0,~2"
numpy = ">=1.19.5,<2"
pydantic = "~2"
networkx = "~3"
pandera = "~0.20"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
addopts = "-vv --junitxml=pytest.xml -p no:warnings --cov-report term-missing:skip-covered --cov=retrack"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
